Simple Author creation done
* Move `Author` domain to `application` layer, add `AuthorController` and `AuthorFacade` for context-based operations, and update MongoDB URI in local configuration.

* Few changes done

* Major refactor done

* Minor test added

* Add `CLAUDE.md` with guidelines and rules for AI contributions

* CR comments changes done